<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#FFFFFF"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context=".com.illuminatingsw.myapp.InfoActivity" >

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/before_search"
            android:id="@+id/textView1"
            android:layout_marginTop="5dp"
            android:textSize="16dp"  />

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/before_search2"
            android:id="@+id/textView2"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:textSize="14dp"
            android:layout_below="@+id/textView1"
            android:layout_alignLeft="@+id/textView1"
            android:autoLink="phone"
            android:linksClickable="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/before_search3"
        android:id="@+id/textView3"
        android:layout_marginTop="10dp"
        android:textSize="14dp"
        android:layout_below="@+id/textView2"
        android:layout_alignLeft="@+id/textView2"   />

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/before_search4"
            android:id="@+id/textView4"
            android:layout_marginTop="10dp"
            android:textSize="14dp"
            android:layout_below="@+id/textView3"
            android:layout_alignLeft="@+id/textView2"
            android:autoLink="all"  />

    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Find Help"
            android:id="@+id/findhelpbutton"
            android:layout_alignRight="@+id/textView3"
            android:layout_below="@+id/textView4"
            android:layout_marginTop="10dp"
            android:background="@color/blue_base"
            android:textColor="@color/white"
            android:paddingLeft="5dp"
            android:paddingRight="5dp" />


    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Continue to "
            android:id="@+id/textView5"
            android:layout_marginTop="25dp"
            android:paddingRight="90dp"
            android:textSize="14dp"
            android:layout_below="@+id/textView4"
            android:layout_alignRight="@+id/imageView2"/>

    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView5"
            android:id="@+id/imageView2"
            android:src="@drawable/greenhorizontal"
            android:paddingTop="20dp"  />

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/after_search"
            android:id="@+id/textView6"
            android:layout_marginTop="5dp"
            android:textSize="14dp"
            android:layout_below="@+id/imageView2"  />

</RelativeLayout>
