<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white">

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Find Help"
        android:id="@+id/findhelpbutton"
        android:layout_alignTop="@+id/textView"
        android:layout_alignParentRight="true"
        android:background="@color/blue_base"
        android:textColor="@color/white"
        android:paddingLeft="5dp"
        android:paddingRight="5dp" />


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:src="@drawable/bannercba"
        android:layout_alignRight="@+id/findhelpbutton"
        android:paddingBottom="15dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Find free or low cost legal assistance here:"
        android:id="@+id/textView"
        style="@android:style/TextAppearance.DeviceDefault.Medium"
        android:textIsSelectable="true"
        android:textSize="18dp"
        android:width="250dp"
        android:layout_alignBottom="@+id/imageView"
        android:layout_alignLeft="@+id/imageView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/MainDescr"
        android:id="@+id/textView2"
        android:layout_below="@+id/findhelpbutton"
        android:layout_alignLeft="@+id/textView"
        android:layout_marginTop="12dp"
        android:textSize="14dp"   />

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/MainDescr2"
            android:id="@+id/textView10"
            android:layout_below="@+id/textView2"
            android:layout_alignLeft="@+id/textView2"
            android:layout_marginTop="8dp"
            android:textSize="14dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/spnstreng"
        android:id="@+id/textView3"
        android:width="240dp"
        android:layout_below="@+id/textView10"
        android:layout_alignLeft="@+id/textView2"
        android:paddingTop="20dp"
        android:textSize="12dp"
        android:textColor="@color/maroon" />

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/spnstr"
            android:id="@+id/textView11"
            android:width="240dp"
            android:layout_below="@+id/textView3"
            android:layout_alignLeft="@+id/textView2"
            android:paddingTop="10dp"
            android:textSize="12dp"
            android:textColor="@color/maroon" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Español"
        android:id="@+id/spanishbutton"
        android:textColor="@color/white"
        android:background="@color/blue_base"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/textView10"
        android:layout_alignRight="@+id/assistbutton"  />

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/desfstr"
            android:id="@+id/textView12"
            android:textSize="12dp"
            android:paddingTop="20dp"
            android:layout_below="@+id/textView11"
            android:layout_alignLeft="@+id/textView5"
            android:layout_marginTop="5dp"
            android:textColor="@color/maroon" />

    <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Assist"
            android:id="@+id/assistbutton"
            android:textColor="@color/white"
            android:background="@color/blue_base"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_alignTop="@+id/textView12"
            android:layout_alignRight="@+id/textView5"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/contactstr"
            android:id="@+id/textView5"
            android:phoneNumber="true"
            android:layout_below="@+id/assistbutton"
            android:layout_alignLeft="@+id/textView3"
            android:textSize="12dp"
            android:paddingTop="10dp"   />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView5"
        android:id="@+id/imageView2"
        android:src="@drawable/greenhorizontal"
        android:paddingTop="5dp"  />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="Application programming courtesy of S. Labana, B. Lesniak"
        android:id="@+id/textView4"
        android:textSize="10dp"
        android:layout_below="@+id/imageView2"
        android:layout_centerHorizontal="true"  />

</RelativeLayout>

</ScrollView>